# SatOpt

./: .gitignore  .travis.yml  Generate.hs  HLint.hs  Makefile  README.md  SatOpt.cabal  optimize.hs  orbits.hs
executable/: Main.hs
test-suite/: HLint.hs  HPC.hs  SatOptSpec.hs
test-suite/SatOpt/: FFTSpec.hs  OptimizeSpec.hs  RenderSpec.hs  UtilitySpec.hs
