author:                 Remy Goldschmidt
version:                0.0.1
build-type:             Simple
cabal-version:          >= 1.10
category:               Other -- TODO
copyright:              2015 Remy Goldschmidt <taktoa@gmail.com>
description:            TODO: Write a package description.
extra-source-files:     CHANGELOG.md CONTRIBUTING.md README.md
license-file:           LICENSE.md
license:                MIT
maintainer:             taktoa@gmail.com
name:                   SatOpt
synopsis:               TODO: Write a package synopsis.
tested-with:            GHC == 7.8

library
    build-depends:      base <5
                      , pure-fft
                      , ad
                      , GLUT
                      , sbv
                      , JuicyPixels
                      , linear
    default-language:   Haskell2010
    exposed-modules:    SatOpt
                        SatOpt.Render
                        -- GENERATE: New.Module
    ghc-options:        -Wall
    ghc-prof-options:   -auto-all -prof
    hs-source-dirs:     library
    default-extensions: OverloadedStrings

executable SatOpt
    build-depends:      base
                      , SatOpt
    default-language:   Haskell2010
    ghc-options:        -threaded
    ghc-prof-options:   -auto-all -prof
    hs-source-dirs:     executable
    main-is:            Main.hs
    default-extensions: OverloadedStrings

test-suite tests
    build-depends:      base
                      , SatOpt
                      , hspec ==2.*
                      , HUnit
                      , QuickCheck
    default-language:   Haskell2010
    ghc-options:        -fhpc -Wall -Werror
    hs-source-dirs:     library
                        test-suite
    main-is:            Spec.hs
    other-modules:      SatOpt
                        SatOpt.Render
                        -- GENERATE: New.Module
                        SatOptSpec
                        SatOpt.RenderSpec
                        -- GENERATE: New.ModuleSpec
    type:               exitcode-stdio-1.0
    default-extensions: OverloadedStrings

test-suite examples
    build-depends:      base
                      , Glob ==0.7.*
                      , doctest ==0.9.*
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            DocTest.hs
    type:               exitcode-stdio-1.0

test-suite coverage
    build-depends:      base
                      , process ==1.*
                      , regex-compat >=0.90
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            HPC.hs
    type:               exitcode-stdio-1.0

test-suite documentation
    build-depends:      base
                      , process
                      , regex-compat
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            Haddock.hs
    type:               exitcode-stdio-1.0

test-suite style
    build-depends:      base
                      , hlint ==1.*
    default-language:   Haskell2010
    hs-source-dirs:     test-suite
    main-is:            HLint.hs
    type:               exitcode-stdio-1.0
